unpackaged/main/default/objects/Experian_Business_Info__c/Experian_Business_Info__c.object-meta.xml
<CustomObject>
    <label>Experian Business Info</label>
    <nameField>
        <displayFormat>EBI - {00000}</displayFormat>
        <label>Experian Business Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian Business Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>