unpackaged/main/default/objects/Experian_Business_Info__c/fields/Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review</label>
    <referenceTo>Credit_Review__c</referenceTo>
    <relationshipLabel>Experian Business Info</relationshipLabel>
    <relationshipName>Experian_Business_Info</relationshipName>
    <type>Lookup</type>
</CustomField>