unpackaged/main/default/objects/Experian_Business_Info__c/fields/Experian_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Experian_Session_Id__c</fullName>
    <label>Experian_Session_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>