unpackaged/main/default/objects/Experian_Business_Info__c/fields/SIC_Name__c.field-meta.xml
<CustomField>
    <fullName>SIC_Name__c</fullName>
    <description>SIC Name field for Experian Commercial process</description>
    <label>SIC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>